using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string isMoving= "isMoving";
    internal static string isRunning= "isRunning";
    internal static string isGrounded= "isGrounded";
    internal static string yVelocity = "YVelocity";
}
